# proxmox

./: .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  _install.sh  _load.sh  _reload.sh  autoload.php  comfyui_workflow.json  comfyui_workflow2.json  debug.php  monitoring_system.sh  proxmox_caddy_config.md  request_chatbot.json  test_api.json  update.php  update_refactored.php
config/: Caddyfile  init_proxmox.sh  install_pfsenseos_router.sh  nginx.conf  proxmox-web.service  tailscale_personnal_vpn.sh
config/cmd/: cmd_curl_run_ai.sh
config/files/comfyui/: ai_video_producer.json  chatbot.json  comfyui.md  face_swap.json  image_to_video.json  (+5 more)
config/install/: common_functions.sh  init_server.sh  install_ai.sh  install_caddy.sh  install_go2rtc.sh  install_php.sh  install_systemd_service.sh  install_tailscale.sh  install_vscode.sh  load_env.sh  old_install.sh  setup_permissions.sh  setup_repositories.sh  uninstall_systemd_service.sh  update_git.sh
examples/: comfyui_usage_examples.php
public/: cameras.php  debug.php  debug_env.php  domotique.html  domotique.php  index.html  index.php  index2.php  info_server.php  proxmox_main_web_server.php  todo_list.php
public/api/: comfyui_api.php
src/: database.php  env.php  main.rs
src/Config/: UpdateConfig.php
src/Controllers/: UpdateController.php
src/Models/: CommandResult.php  Operation.php  UpdateStatistics.php
src/Services/: CommandExecutor.php  OperationFactory.php  PhpServiceDetector.php  SslCertificateService.php
src/Views/: BaseConsoleView.php  OperationView.php  SummaryView.php
(+15 files in other folders)
