[package]
name = "Proxmox"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9"
actix-rt = "2.10"
actix-files = "0.6"
actix-cors = "0.7"
tokio = { version = "1.41", features = ["full"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.11"
log = "0.4"
